test/vm/errors/wrong_arity.ach
// Expected error: wrong number of arguments
let f = fn(a, b) { a + b }
f(1)
